# libmetal

./: CMakeLists.txt
cmake/: options.cmake
